# coding-competition

./: .clang_complete  .gitignore  002-even_fibonacci_numbers.hs  003-largest_prime_factor.cpp  004-largest_palindrome_product.cpp  005-smallest_multiple.cpp  006-sum_square_difference.cpp  007-10001st_prime.cpp  008-largest_product_in_a_series.cpp  008-largest_product_in_a_series_2.cpp  009-special_pythagorean_triplet.cpp  010-summation_of_primes.cpp  013-large_sum.cpp  014-longest_collatz_sequence.cpp  015-lattice_path.cpp  015-lattice_path.sh  016-power_digit_sum.cpp  CMakeLists.txt  XXXX-template.cpp  build
003/: CMakeLists.txt  largest_prime_factor.cpp
004/: CMakeLists.txt  largest_palindrome_product.cpp
005/: CMakeLists.txt  smallest_multiple.cpp
006/: CMakeLists.txt
007/: 10001st_prime.cpp  CMakeLists.txt
008/: CMakeLists.txt  largest_product_in_a_series.cpp
009/: CMakeLists.txt
010/: CMakeLists.txt
013/: CMakeLists.txt  large_sum.cpp
014/: CMakeLists.txt
015/: CMakeLists.txt  lattice_path.cpp
016/: CMakeLists.txt  power_digit_sum.cpp
codeforces/: .gitignore
codeforces/617/: problem617C.cpp  problem617C.py
codeforces/618/: problemA.cpp  problemB.cpp  problemC.cpp
codeforces/template/: create  problemA.cpp  test
euler/: 001-multiples_of_3_and_5.hs  003-largest_prime_factor.cpp  005-smallest_multiple.cpp  006-sum_square_difference.cpp  008-largest_product_in_a_series_2.cpp  010-summation_of_primes.cpp  013-large_sum.cpp  014-longest_collatz_sequence.cpp  015-lattice_path.sh  016-power_digit_sum.cpp  XXXX-template.cpp  build  vim_build_run
external_libs/: init_libs
hacker_rank/: template
hacker_rank/almost_sorted_intervals/: problemA  problemA-old.cpp  problemA.cpp  problemA.py
hacker_rank/attribute_parser/: inputA2res  problemA.cpp
hacker_rank/palindromic_border/: CMakeLists.txt  GNUmakefile  task.hpp  test.cpp
other/: find_opt_trade_in_past_stock_seq.cpp
